Fix vertical overflow

--- a/styles/partials/sections.scss
+++ b/styles/partials/sections.scss
@@ -595,6 +595,7 @@ button {
   }
 
   .dropdown-menu {
+    overflow-y: scroll;
     max-height: 496px;
     padding: 0;
     border-radius: 6px;
